# core-nomos

./: ARCHITECTURE.md  BOOTSTRAP_HANDOFF.md  Cargo.toml  NON_IDEAL_AGENTS.md  README.md  flake.nix
src/: definition.rs  domain.rs  engine.rs  error.rs  fixtures.rs  generation.rs  identity.rs  lib.rs  meta.rs  name_boundary.rs  package.rs  prelude.rs  template.rs
tests/: enriched.rs  escape_set.rs  macro_door.rs  pipeline.rs  prelude.rs  typed_transform_boundary.rs
