[package]
name         = "core-nomos"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-nomos"
description  = "The stringless encoded form of Nomos: macros as typed data transforming the schema encoded form into the logos encoded form. Two macro kinds (named + structural), a stateful-at-rest content-identified MacroPackage, and a closed template escape algebra (Realize / Splice / Invoke). TextualNomos remains deferred."
publish      = false

[lib]
name = "core_nomos"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "7e60f60fbc144265cf5ac1ec238b87744967d4eb" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "7e60f60fbc144265cf5ac1ec238b87744967d4eb" }
core-schema      = { git = "https://github.com/LiGoldragon/core-schema.git", rev = "26a480777a7b95e6bb825ce14d4527596bf95dbf" }
core-logos       = { git = "https://github.com/LiGoldragon/core-logos.git", rev = "c25b5f58205adc34b9ec940634d0f50fdfb0cc3d" }
textual-rust     = { git = "https://github.com/LiGoldragon/textual-rust.git", rev = "95a8a29ead1d1b41fbf555cabb2c1abb56709c53" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "7e60f60fbc144265cf5ac1ec238b87744967d4eb" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
