[package]
name         = "core-nomos"
version      = "0.4.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-nomos"
description  = "The stringless encoded form of Nomos: macros as typed data transforming the schema encoded form into the logos encoded form. Two macro kinds (named + structural), a stateful-at-rest content-identified MacroPackage, and a closed template escape algebra (Realize / Splice / Invoke). TextualNomos remains deferred."
publish      = false

[lib]
name = "core_nomos"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "f12a80c85d9d27ac4432b86b7d3095e8387c6fa9" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "f12a80c85d9d27ac4432b86b7d3095e8387c6fa9" }
core-schema      = { git = "https://github.com/LiGoldragon/core-schema.git", rev = "1122370fbe3f65c56957431714a19c3920365466" }
core-logos       = { git = "https://github.com/LiGoldragon/core-logos.git", rev = "22b12a474c86cf812c89b41054d4e26e870ec70c" }
textual-rust     = { git = "https://github.com/LiGoldragon/textual-rust.git", rev = "f264e9465ad2988550a296419471a4c18386d496" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "f12a80c85d9d27ac4432b86b7d3095e8387c6fa9" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
