[package]
name         = "core-nomos"
version      = "0.5.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-nomos"
description  = "The stringless encoded form of Nomos: macros as typed data transforming the schema encoded form into the logos encoded form. Two macro kinds (named + structural), a stateful-at-rest content-identified MacroPackage, and a closed template escape algebra (`$x` realize / `$@xs` splice)."
publish      = false

[lib]
name = "core_nomos"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }
core-schema      = { git = "https://github.com/LiGoldragon/core-schema.git", rev = "cee7f0873c8ccfba0afe09cbb40de531c9e73077" }
core-logos       = { git = "https://github.com/LiGoldragon/core-logos.git", rev = "7fabf6d42f458963c6b4bf526284ba88087a71c7" }
textual-rust     = { git = "https://github.com/LiGoldragon/textual-rust.git", rev = "89536fe677d45f2624cd5e6e4675fb4314fff309" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
